openshift/service-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: soc-api-transaction-proxy
  labels:
    app: soc-api-transaction
    component: proxy
spec:
  selector:
    app: soc-api-transaction
    component: proxy
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
