openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soc-api-transaction
  labels:
    app: soc-api-transaction
    component: api
spec:
  selector:
    app: soc-api-transaction
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
